# x

./: .gitignore  Cargo.toml  Dockerfile  README.md  init.sql  log4rs.yaml
.github/workflows/: deploy.yml  save.yml
frontend/pixiu/: .prettierrc  package-lock.json  vite.config.ts
frontend/pixiu-m/: package.json  vite.config.ts
frontend/pixiu-m/src/: App.vue
frontend/pixiu-m/src/api/: api.ts
frontend/pixiu-m/src/components/: EchartPie.vue  Property.vue  Table.vue
frontend/pixiu-m/src/components/baseEcharts/: index.vue
frontend/pixiu-m/src/types/: debt.d.ts  page.d.ts
frontend/pixiu/src/: App.vue  main.ts
frontend/pixiu/src/api/: api.ts  http.ts
frontend/pixiu/src/components/: Property.vue  Table.vue
frontend/pixiu/src/hooks/: useEcharts.ts
frontend/pixiu/src/types/: fund.d.ts  property.d.ts
frontend/resumes/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/resumes/src/: App.vue  style.css
frontend/resumes/src/components/: ApplicantCard.vue  ApplicantList.vue  ApplicantScore.vue  ResumeUpload.vue  ScoreChart.vue
frontend/resumes/src/types/: applicant.ts
src/: comic.rs  email.rs  gold.rs  leetcode.rs  main.rs  news.rs  pixiu.rs  saying.rs  stock.rs  utils.rs  weather.rs
src/api/: error.rs  mod.rs  pixiu.rs
