[package]
name = "x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = { version = "0.11.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
mime = "0.3"

reqwest = { version = "0.12.9", features = ["json", "rustls-tls"], default-features = false }
encoding_rs = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.10.0"
charts-rs = { version = "0.3.19", features = ["image-encoder"] }
scraper = "0.22.0"

tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
sqlx = { version = "0.8.3", features = [ "mysql", "runtime-tokio-rustls" ] }
dotenv = "0.15"

[dev-dependencies]
tokio-test = "*"
